# ember-esp-nn

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/ember_esp_nn/: Cargo.toml  build.rs
crates/ember_esp_nn/src/: lib.rs  stdio_stubs.c
crates/ember_esp_nn/src/ops/: add.rs  conv2d.rs  depthwise.rs  fully_connected.rs  mod.rs  mul.rs  pool.rs  softmax.rs
crates/esp_nn_sys/: Cargo.toml  README.md  build-template.rs  build.rs
crates/esp_nn_sys/src/: lib.rs
models/: README.md  mobilenet.tflite
scripts/: gen-esp-cargo-env.ps1  generate_esp_nn_sys_build_rs.py
tests/ember-infer-test/: Cargo.toml
tests/ember-model-bench/: Cargo.toml  build.rs
tests/ember-model-bench/tests/: hello_test.rs
tests/ember-nn-kernels/: Cargo.toml  build.rs
