[package]
name = "ember_esp_nn"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ESP-NN backend for the ember inference engine"

[dependencies]
ember-infer-core = "0.1"
esp_nn_sys = { path = "../esp_nn_sys" }

[features]
default = ["esp32s3"]
esp32s3 = ["esp_nn_sys/esp32s3"]
esp32p4 = ["esp_nn_sys/esp32p4"]
ansi = ["esp_nn_sys/ansi"]
