[package]
name = "ember_esp_nn"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ESP-NN backend for the ember inference engine"

[dependencies]
defmt = { version = "1.0.1", optional = true }
ember-infer-core = "0.1.2"
esp_nn_sys = { path = "../esp_nn_sys" }
libm = "0.2"

[build-dependencies]
cc = "1.0"

[features]
default = ["esp32s3"]
esp32s3 = ["esp_nn_sys/esp32s3"]
esp32p4 = ["esp_nn_sys/esp32p4"]
ansi = ["esp_nn_sys/ansi"]
trace-ops = ["dep:defmt"]
force-ansi-add = []
force-ansi-mul = []
force-ansi-conv = []
force-ansi-depthwise = []
force-ansi-fc = []
force-ansi-pool = []
force-ansi-softmax = []
