[package]
name = "esp_nn_sys"
version = "0.2.0"
edition = "2024"
links = "esp_nn"
description = "Raw Rust FFI bindings for Espressif ESP-NN"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/vintcessun/ember-esp-nn"
keywords = ["esp", "esp-nn", "ffi", "embedded", "no-std"]
categories = ["embedded", "external-ffi-bindings", "no-std"]
include = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "wrapper.h",
    "src/**",
    "vendor/esp-nn/include/**",
    "vendor/esp-nn/src/**",
    "vendor/esp-nn/LICENSE",
]

[lib]
crate-type = ["rlib"]

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.61"

[features]
default = []
ansi = []
esp32s3 = []
esp32p4 = []
