[package]
edition = "2024"
name = "ember-infer-test"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "ember-infer-test"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
    "defmt",
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
] }

defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32s3"] }

embassy-net = { version = "0.9.1", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
    "defmt",
    "esp-alloc",
    "esp32s3",
    "unstable",
    "wifi",
] }
smoltcp = { version = "0.13.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

critical-section = "1.2.0"
static_cell = "2.1.1"
ember-infer-core = "0.1"
ember-infer-macros = "0.1"
ember_esp_nn = { version = "0.1.0", path = "../../crates/ember_esp_nn" }

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
    "defmt",
    "embassy-010",
    "external-executor",
    "xtensa-semihosting",
] }

[build-dependencies]
cc = "1.2.61"

[features]
default = ["ansi"]
esp32s3 = ["ember_esp_nn/esp32s3"]
esp32p4 = ["ember_esp_nn/esp32p4"]
ansi = ["ember_esp_nn/ansi"]
